[gd_scene load_steps=4 format=3 uid="uid://d2lejekyqlg72"]

[ext_resource type="Script" path="res://src/main_scenes/main.gd" id="1_887oi"]
[ext_resource type="PackedScene" uid="uid://ceshkrptfcwe3" path="res://src/player_scenes/player.tscn" id="1_ydvtx"]
[ext_resource type="PackedScene" uid="uid://b14vo3l43f0s0" path="res://src/hud_scenes/hud.tscn" id="3_3fgbh"]

[node name="Main" type="Node"]
script = ExtResource("1_887oi")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.580392, 0.580392, 1, 1)

[node name="Player" parent="." instance=ExtResource("1_ydvtx")]
position = Vector2(336, 352)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("3_3fgbh")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(336, 352)

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
